css/style.css
/*
 * @author: Wladimir Schmidt
 */

body {
    margin: 0;
    padding: 0;
    height: 100%;
}

/* Logo */

.masthead {
    margin: 0 auto;
    width: 40%;
}

/* Custom Dialog */

.hide {
    display: none;
}

/* Play Store center */

.playStoreLink {
    margin: 0 auto;
    width: 15%;
}

progress[name="progress"], .btnCreateOK {
    margin: 0 auto;
    width: 30%;    
}

input[name='publishMethodInvite'], input[name='publishMethod'], input[name='study_period'] {
    margin-right: 0.5em;
    margin-top: -0.02em;
}

/* --------------- */

/* Hero unit tweak */
.hero-unit {
    font-family: "Myriad Pro", "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
}

.btnLeaveGroup {
    position: relative;
    float: right;
    top: -3em;
    margin: 0.5em 0;
}

.btnInstantScientist {
    position: relative;
    float: right;
    margin-top: -3em;
}

.btnCreateJoinGroup {
    float: right;
}

/*
* Survey style
*/

div[name*='survey_container_'] {
    margin: 3em 1em 3em 1em;
}

button[name="btnAddSurvey"] {
    margin-bottom: 1em;
}

.scrollTo {
    cursor: pointer;
    position: relative;
    float: right;
    margin-bottom: 10px;
    margin-right: 10px;
}

.survey_elements {
    display: inline;
}

.survey_elements_container {
    margin: 1.5em 0;
}

.content_appears_here ul {
    list-style-type: none;
}

.content_appears_here span {
    margin-left: 15px;
}

.survey_form {
    margin-top: 4em;
}

.survey_name {
    margin-top: 1em;
}

.survey_body {
    margin-top: 1.5em;
}

/* ---------------------- */

.control-label {
    cursor: default;   
}

/* Study APK buttos */
.apk_control_buttons {
    list-style-type: none;    
    position: absolute;
    right: 20px;
    top: 20px;
}

.apk_control_buttons li {
    display: block;
    margin: 10pt 0pt;
}

.apk_control_buttons button {
    width: 10em !important;
}

/* Custom container */
.container {
    margin: 0 auto;
    max-width: 1000px;
}
.container > hr {
    margin: 60px 0;
}

/* Customize the navbar links to be fill the entire space of the .navbar */
.navbar .navbar-inner {
    padding: 0;
}
.navbar .nav {
    margin: 0;
    display: inline;
    width: 100%;
}
.navbar .nav > li {
    display: table-cell;
    width: 20%;
    /*width: 1%;
    float: none;*/
}

.navbar .nav > li a {
    font-family: "Myriad Pro", "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
    font-weight: bold;
    text-align: left;
    border-left: 1px solid rgba(255,255,255,.75);
    border-right: 1px solid rgba(0,0,0,.1);
}
.navbar .nav li:first-child a {
    border-left: 0;
    border-radius: 3px 0 0 3px;
}
.navbar .nav li:last-child a {
    border-right: 0;
    border-radius: 0 3px 3px 0;
}

/* Navbar Buttons show submenus on hover */
ul.nav li.dropdown:hover > ul.dropdown-menu{
    display: block;    
}

.navbar .dropdown-menu {
 margin-top: 0px;
}

.tmp{
    font-family: "Lucida Console", "Courier New", monospace;
    color:#e5e5e5;
}

.tmp_special {
    margin-top: -25pt;
    margin-bottom: 20pt;
    text-shadow: -1px -1px 0px #999, 1px 1px 0px #fff;
}

.tmp2 {
    text-shadow: -2px -2px 0px #999, 1px 1px 0px #fff;
}

/* Sticky footer styles
-------------------------------------------------- */

html,
body {
    height: 100%;
/* The html and body elements cannot have any padding or margin. */
}

/* Wrapper for page content to push down footer */
.wrap {
    min-height: 100%;
    height: auto !important;
    height: 100%;

    margin: 0 auto -120px;
}

#footer {
    height: 120px;
    background-color: #333333;
}

#footer p {
    margin-top: 58px;
    /*color: #FFF; */
    font-family: "Lucida Console", "Courier New", monospace;
}

.push{
    height: 80px;
}

/* Lastly, apply responsive CSS fixes as necessary */
@media (max-width: 767px) {
#footer {
    margin-left: -20px;
    margin-right: -20px;
    padding-left: 20px;
    padding-right: 20px;
}
}

.form-signin {
    position: fixed;
    top: 30%;
    left: 40%;
    max-width: 400px;
    width: 220pt;
    padding: 19px 29px 29px;
    margin: 0 auto 20px;
    background-color: #333333;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
    -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
    box-shadow: 0 1px 2px rgba(0,0,0,.05);
}
.form-signin .form-signin-heading,
.form-signin .checkbox {
    margin-bottom: 10px;
}

.form-signin-heading{
    padding-bottom: 10pt;
}

.form-signin input[type="text"],
.form-signin input[type="password"] {
    font-size: 16px;
    height: auto;
    margin-bottom: 15px;
    padding: 7px 9px;
}

.form-signin button {
    float: right;
    font-weight: bold;
    margin-right: 10px;
    margin-top: -25px;
    margin-right: -2px;
}

.form-signin a {
    font-weight: bold;
}

/* Layout background for login dimming */
#dim_back{ 
    position:absolute; 
    top:0; 
    left:0; 
    width:100%; 
    z-index:100; 
    background-color: rgba(0,0,0,0.5); 
    display:none; 
    text-align:left; 
}

.btn_login, .btnLoginProfileCtrl {
    float: right; 
    margin-top: 30pt;
}

.btn_login i, .btn_profile i {
    margin-right: 5pt;
}

#login_error_message{
	display: none;
}

/* LIGHTBOX CLOSING X */
a.boxclose{
    float:right;
    width:26px;
    height:26px;
    background:transparent url(../img/cancel.png) repeat top left;
    margin-top:-30px;
    margin-right:-40px;
    cursor:pointer;
}

/* REGISTRATION FORM */


/* ************************************** */

